web: Vm swagger
